Fix display on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,17 @@ hr {
     height: 40px;
   }
 
+  /* #small {
+    color: #e8b923
+  }
+
+  #smallHide {
+    color: black;
+  } */
+}
+
+/* Mobile Styles */
+@media only screen and (max-width: 850px) {
   #small {
     color: #e8b923
   }
